generated/checker-for-evaluation/generated/test-Out-of-Bound-63ae548f1054a0b71678d0349c7dc9628ddd42ca/build_logs/3/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:18:17: error: ‘taint’ is not a namespace-name
   18 | using namespace taint;
      |                 ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::CurveBoundsCheckerVisitor::VisitArraySubscriptExpr(clang::ArraySubscriptExpr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:80:72: error: no matching function for call to ‘clang::DynTypedNodeList::DynTypedNodeList(llvm::SmallVectorTemplateCommon<clang::DynTypedNode, void>::iterator, llvm::SmallVectorTemplateCommon<clang::DynTypedNode, void>::iterator)’
   80 |       Parents = DynTypedNodeList(NextParents.begin(), NextParents.end());
      |                                                                        ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:2:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:104:3: note: candidate: ‘clang::DynTypedNodeList::DynTypedNodeList(llvm::ArrayRef<clang::DynTypedNode>)’
  104 |   DynTypedNodeList(ArrayRef<DynTypedNode> A) : IsSingleNode(false) {
      |   ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:104:3: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:100:3: note: candidate: ‘clang::DynTypedNodeList::DynTypedNodeList(const clang::DynTypedNode&)’
  100 |   DynTypedNodeList(const DynTypedNode &N) : IsSingleNode(true) {
      |   ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:100:3: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:92:7: note: candidate: ‘constexpr clang::DynTypedNodeList::DynTypedNodeList(const clang::DynTypedNodeList&)’
   92 | class DynTypedNodeList {
      |       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:92:7: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:92:7: note: candidate: ‘constexpr clang::DynTypedNodeList::DynTypedNodeList(clang::DynTypedNodeList&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:92:7: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:87:46: error: no matching function for call to ‘clang::ento::PathDiagnosticLocation::createBegin(clang::ArraySubscriptExpr*&, clang::SourceManager&, const clang::FunctionDecl*&)’
   87 |           PathDiagnosticLocation::createBegin(ASE, SM, FuncDecl);
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&)’
  254 |   static PathDiagnosticLocation createBegin(const Decl *D,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note:   candidate expects 2 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:3: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:27: note:   no known conversion for argument 1 from ‘clang::ArraySubscriptExpr*’ to ‘const clang::Decl*’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |               ~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Stmt*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  267 |   static PathDiagnosticLocation createBegin(const Stmt *S,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:269:81: note:   no known conversion for argument 3 from ‘const clang::FunctionDecl*’ to ‘clang::ento::LocationOrAnalysisDeclContext’ {aka ‘llvm::PointerUnion<const clang::LocationContext*, clang::AnalysisDeclContext*>’}
  269 |                                             const LocationOrAnalysisDeclContext LAC);
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:89:44: error: no matching function for call to ‘clang::ento::BugType::BugType({anonymous}::CurveBoundsCheckerVisitor*, const char [37], const char [13])’
   89 |                              "Array Bounds");
      |                                            ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:23,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:42:3: note: candidate: ‘clang::ento::BugType::BugType(const clang::ento::CheckerBase*, llvm::StringRef, llvm::StringRef, bool)’
   42 |   BugType(const CheckerBase *Checker, StringRef Desc,
      |   ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:42:30: note:   no known conversion for argument 1 from ‘{anonymous}::CurveBoundsCheckerVisitor*’ to ‘const clang::ento::CheckerBase*’
   42 |   BugType(const CheckerBase *Checker, StringRef Desc,
      |           ~~~~~~~~~~~~~~~~~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:38:3: note: candidate: ‘clang::ento::BugType::BugType(clang::ento::CheckerNameRef, llvm::StringRef, llvm::StringRef, bool)’
   38 |   BugType(CheckerNameRef CheckerName, StringRef Desc,
      |   ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:38:26: note:   no known conversion for argument 1 from ‘{anonymous}::CurveBoundsCheckerVisitor*’ to ‘clang::ento::CheckerNameRef’
   38 |   BugType(CheckerNameRef CheckerName, StringRef Desc,
      |           ~~~~~~~~~~~~~~~^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:27:7: note: candidate: ‘clang::ento::BugType::BugType(const clang::ento::BugType&)’
   27 | class BugType {
      |       ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:27:7: note:   candidate expects 1 argument, 3 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
